Add charset meta tag to index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+  <meta charset="UTF-8">
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&display=swap" rel="stylesheet">
   <title>וורדל׳ה - משחק ב-6 ניחושים</title>
   <!-- Firebase App (the core Firebase SDK) -->
