--- a/index.html
+++ b/index.html
@@ -49,10 +49,16 @@
       window.getSharedManualWordIndex = function(callback) {
         get(child(ref(db), 'manualMode/currentWordIndex')).then((snapshot) => {
           if (snapshot.exists()) {
-            callback(parseInt(snapshot.val()) || 0);
+            const index = parseInt(snapshot.val()) || 0;
+            callback(index);
           } else {
-            // Initialize to 0 if doesn't exist
-            callback(0);
+            // Initialize to 0 in Firebase if doesn't exist (so all devices sync)
+            set(ref(db, 'manualMode/currentWordIndex'), 0).then(() => {
+              callback(0);
+            }).catch((error) => {
+              console.error('Error initializing word index:', error);
+              callback(0);
+            });
           }
         }).catch((error) => {
           console.error('Error getting shared word index:', error);
