Refactor user data loading logic to ensure it only occurs on initial page load in both manual and auto modes. Update comments for clarity on synchronization with Firebase and improve gameplay flow by preventing unnecessary data loads during word transitions.

--- a/index.html
+++ b/index.html
@@ -194,11 +194,8 @@ console.log(countPlayersPerDay());
 
       /*LOAD LOAD LOAD LOAD LOAD LOAD LOAD IMPORTANT*/
   
-      // Load user data (works for both manual and auto mode now)
-      const isManualMode = localStorage.getItem('manualMode') === 'true';
-      if (window.loadUserData) {
-          window.loadUserData();
-      }
+      // Don't load user data automatically - let Firebase synchronization happen first
+      // User data will be loaded after Firebase sync is complete
       
       // Initialize manual mode UI
       setTimeout(function() {
