Enhance game mode restoration logic by introducing a flag to skip initial Firebase sync during mode application. Improve manual mode handling with additional console logging for better debugging and user feedback. Update wordlist in wordlist-manual.js to include a new word for gameplay enhancement. Remove unused screenshot file.

--- a/index.html
+++ b/index.html
@@ -230,6 +230,9 @@ console.log(countPlayersPerDay());
           const savedGameMode = localStorage.getItem('gameMode') || 'test';
           console.log('[WORDLE_SYNC] Restoring saved game mode:', savedGameMode);
           
+          // Set flag BEFORE applying mode to prevent conflicts
+          window.skipInitialFirebaseSync = true;
+          
           // Apply the saved game mode
           if (window.applyGameMode) {
               window.applyGameMode(savedGameMode);
