Enhance debugging capabilities by adding console log for double-click detection on the favicon in index.html. Update main.js to include additional logging for the skipInitialFirebaseSync flag, improving visibility into the initialization process and manual mode handling.

--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@ console.log(countPlayersPerDay());
           </div>
       </div>
       <div>
-          <img src="wordale-favicon.png" ondblclick="openManagerPage()" style="cursor: pointer;" title="לחץ פעמיים לפתיחת דף ניהול">
+          <img src="wordale-favicon.png" ondblclick="console.log('Double-click detected!'); openManagerPage();" style="cursor: pointer;" title="לחץ פעמיים לפתיחת דף ניהול">
       </div>
   </div>
 </head>
