Enhance synchronization of current word changes in main.js and index.html. Implemented a callback on the first Firebase listener call to ensure devices sync immediately, even on initial load. Added a function to ensure listeners are set up regardless of game mode, improving gameplay consistency and user experience. Removed obsolete test-sync.html file.

--- a/index.html
+++ b/index.html
@@ -219,6 +219,10 @@
               if (isFirstCall) {
                 isFirstCall = false;
                 console.log('[WORDLE_SYNC] Current word Firebase listener set up, initial value:', newWord);
+                // CRITICAL: Still call the callback on first call if word is different
+                // This ensures devices sync even when they first load
+                console.log('[WORDLE_SYNC] Processing initial word value through callback');
+                callback(newWord);
                 return;
               }
               console.log('[WORDLE_SYNC] Firebase detected current word change to:', newWord);
