Update meta description and favicon in index.html; enhance word validation logic in main.js to check against additional wordlists, improving gameplay accuracy and user experience.

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
 <!-- Add Firebase products that you want to use -->
 <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
-  <meta name="description" content=" וורדל׳ה - וורדל בעברית. משחק יומי בו יש לכם 6 נסיונות לנחש את המילה Wordaleh - Wordle in Hebrew. A daily word game where you have 6 tries to guess the word">
+  <meta name="description" content=" וורדל׳ה - וורדל בעברית. משחק בו יש לכם 6 נסיונות לנחש את המילה Wordaleh - Wordle in Hebrew. A word game where you have 6 tries to guess the word">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Assistant&family=Secular+One&display=swap" rel="stylesheet">
-  <link rel="icon" type="image/x-icon" href="wordale-favicon.png">
+  <link rel="icon" type="image/x-icon" href="wordale-favicon-mayabd.png">
   <meta property="og:image" content="wordale-favicon.png">
   <meta property="twitter:image" content="wordale-favicon.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
